--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,15 @@
   "theme_color": "#bb86fc",
   "icons": [
     {
-      "src": "icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ]
 }
+
+
+
+
+
