--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,8 @@
 {
   "name": "TOTAL K-POP Global",
   "short_name": "TotalKpop",
-  "description": "Tu portal VIP de noticias, videos y fotos de la cultura coreana.",
-  "start_url": "./index.html",
+  "start_url": "/", 
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#0a0a0a",
   "theme_color": "#bb86fc",
   "icons": [
@@ -16,6 +14,10 @@
     }
   ]
 }
+
+
+
+
 
 
 
